--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
 
       # Публикуем
       - name: Publish .NET Core Project
-        run: dotnet publish Sunduk.csproj -c Release --output release --nologo
+        run: dotnet publish Sunduk.PWA/Sunduk.PWA.csproj -c Release --output release --nologo
         
       - name: Uploading files to gh-pages branch
         uses: JamesIves/github-pages-deploy-action@4.1.4
