--- a/.github/workflows/main-test.yml
+++ b/.github/workflows/main-test.yml
@@ -6,6 +6,9 @@ name: DeployTest
 on:
   push:
     branches: [ test ]
+    
+    # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
 jobs:
   deploy:
