--- a/.github/workflows/main-test.yml
+++ b/.github/workflows/main-test.yml
@@ -40,3 +40,4 @@ jobs:
           branch: gh-test-pages
           folder: release/wwwroot
           repository-name: dece1ver/sunduk-test
+          token: ${{ secrets.ACCESS_TOKEN }}
