--- a/.github/workflows/main-test.yml
+++ b/.github/workflows/main-test.yml
@@ -25,7 +25,7 @@ jobs:
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '6.x.x'
-          include-prerelease: false
+          include-prerelease: true
 
       # Публикуем
       - name: Publish .NET Core Project
@@ -35,7 +35,7 @@ jobs:
         run: touch release/wwwroot/.nojekyll
       
       - name: Uploading files to gh-pages branch
-        uses: JamesIves/github-pages-deploy-action@4.1.4
+        uses: JamesIves/github-pages-deploy-action@4.1.7
         with:
           branch: gh-test-pages
           folder: release/wwwroot
