--- a/Sunduk.PWA/Sunduk.PWA.csproj
+++ b/Sunduk.PWA/Sunduk.PWA.csproj
@@ -12,6 +12,7 @@
     <NeutralLanguage />
     <NoWin32Manifest>true</NoWin32Manifest>
 	<PublishTrimmed>false</PublishTrimmed>
+	<RunAOTCompilation>true</RunAOTCompilation>
   </PropertyGroup>
 
   <ItemGroup>
