--- a/.github/workflows/api-deploy.yml
+++ b/.github/workflows/api-deploy.yml
@@ -26,7 +26,16 @@ jobs:
         with:
           dotnet-version: '6.x.x'
           include-prerelease: false
-
+      
+      - name: SetSecret
+        run: dotnet user-secrets set "FeedbackFrom" ${{ secrets.FEEDBACK_FROM }}
+        
+      - name: SetSecret
+        run: dotnet user-secrets set "FeedbackTo" ${{ secrets.FEEDBACK_TO }}
+        
+      - name: SetSecret
+        run: dotnet user-secrets set "FeedbackPass" ${{ secrets.FEEDBACK_PASS }}
+        
       - name: Publish .NET Core Project
         run: dotnet publish Sunduk.WebApi/Sunduk.WebApi.csproj -c Release --output release --nologo
           
