--- a/.github/workflows/api-deploy.yml
+++ b/.github/workflows/api-deploy.yml
@@ -28,13 +28,13 @@ jobs:
           include-prerelease: false
       
       - name: SetSecret
-        run: dotnet user-secrets set "FeedbackFrom" ${{ secrets.FEEDBACK_FROM }}
+        run: dotnet user-secrets set "FeedbackFrom" ${{ secrets.FEEDBACK_FROM }} --project "/home/runner/work/Sunduk/Sunduk/Sunduk.WebApi"
         
       - name: SetSecret
-        run: dotnet user-secrets set "FeedbackTo" ${{ secrets.FEEDBACK_TO }}
+        run: dotnet user-secrets set "FeedbackTo" ${{ secrets.FEEDBACK_TO }} --project "/home/runner/work/Sunduk/Sunduk/Sunduk.WebApi"
         
       - name: SetSecret
-        run: dotnet user-secrets set "FeedbackPass" ${{ secrets.FEEDBACK_PASS }}
+        run: dotnet user-secrets set "FeedbackPass" ${{ secrets.FEEDBACK_PASS }} --project "/home/runner/work/Sunduk/Sunduk/Sunduk.WebApi"
         
       - name: Publish .NET Core Project
         run: dotnet publish Sunduk.WebApi/Sunduk.WebApi.csproj -c Release --output release --nologo
