--- a/Sunduk.PWA/Sunduk.PWA.csproj
+++ b/Sunduk.PWA/Sunduk.PWA.csproj
@@ -12,6 +12,7 @@
     <NeutralLanguage />
     <NoWin32Manifest>true</NoWin32Manifest>
 	<PublishTrimmed>false</PublishTrimmed>
+	<UserSecretsId>d8e95f7a-203c-4a38-b42e-fa8e200063e5</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
