--- a/Sunduk.PWA/Sunduk.PWA.csproj
+++ b/Sunduk.PWA/Sunduk.PWA.csproj
@@ -5,14 +5,15 @@
     <ServiceWorkerAssetsManifest>service-worker-assets.js</ServiceWorkerAssetsManifest>
     <AssemblyName>Sunduk</AssemblyName>
     <ApplicationIcon>wwwroot\favicon.ico</ApplicationIcon>
-    <AssemblyVersion>1.0.3.11</AssemblyVersion>
-    <FileVersion>1.0.3.11</FileVersion>
+    <AssemblyVersion>1.0.4.0</AssemblyVersion>
+    <FileVersion>1.0.4.0</FileVersion>
     <Authors>dece1ver</Authors>
-    <Version>1.0.3</Version>
+    <Version>1.0.4</Version>
     <NeutralLanguage />
     <NoWin32Manifest>true</NoWin32Manifest>
 	<PublishTrimmed>false</PublishTrimmed>
 	<UserSecretsId>d8e95f7a-203c-4a38-b42e-fa8e200063e5</UserSecretsId>
+	<Description>Sunduk</Description>
   </PropertyGroup>
 
   <ItemGroup>
