--- a/Sunduk.PWA/Sunduk.PWA.csproj
+++ b/Sunduk.PWA/Sunduk.PWA.csproj
@@ -29,6 +29,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.7" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="9.0.7" PrivateAssets="all" />
     <PackageReference Include="MudBlazor" Version="8.10.0" />
+    <PackageReference Include="NCalcSync" Version="5.5.0" />
     <PackageReference Include="System.Net.Http.Json" Version="9.0.7" />
   </ItemGroup>
 
